2017-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2017-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a rule to the 'make distclean' target to remove 'qrc_*'
	files.
2017-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'rivendell-producer.nsi.in' to install program shortcuts
	in system context.
2017-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Changed DEFAULT_SERVER_HOSTNAME to "172.30.5.133".
	* Changed DEFAULT_SERVER_USERNAME to "".
2017-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.
2017-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that caused log header data to fail
	to be saved from the Edit Log dialog. [GitHub issue #000001].
2017-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that caused the log list metadata to
	fail to be updated after doing 'Save' and then 'Cancel' on a log.
2017-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Commented out the block that checks for Administrator permissions
	in 'rivendell-producer.nsi.in'.
2017-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.5.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs that caused 'FADEUP_GAIN' and 'FADEDOWN_GAIN' parameter
	values to fail to be preserved when editing a log.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Removed rdlibraryb(1) from the Windows installer.
	* Made rdlogeditb(1) a mandatory component in the Windows installer.
	* Added a desktop shortcut for rdlogeditb(1) in the Windows installer.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.6.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused the Services list in the 'Add Log' dialog
	to be populated in reverse order.