@@ -315,3 +315,6 @@
 2017-07-12 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug that caused the Services list in the 'Add Log' dialog
 	to be populated in reverse order.
+2017-07-12 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug that caused the Service name to default to the first
+	entry on the list when doing a 'Save As' for a log.
